test_regress/t/t_queue_slice.out
%Error-UNSUPPORTED: t/t_queue_slice.v:22:11: Unsupported: Assignment pattern applies against non struct/union data type: 'string[$]'
                                           : ... In instance t
   22 |       q = '{"q", "b", "c", "d", "e", "f"};
      |           ^~
%Error-UNSUPPORTED: t/t_queue_slice.v:25:11: Unsupported: Replication to form 'string[$]' data type
                                           : ... In instance t
   25 |       q = {"q", "b", "c", "d", "e", "f"};
      |           ^
%Error-UNSUPPORTED: t/t_queue_slice.v:28:9: Unsupported: Queue .delete(index) method, as is O(n) complexity and slow.
                                          : ... In instance t
   28 |       q.delete(1);
      |         ^~~~~~
%Error-UNSUPPORTED: t/t_queue_slice.v:32:9: Unsupported: Queue .insert method, as is O(n) complexity and slow.
                                          : ... In instance t
   32 |       q.insert(2, "ins2");
      |         ^~~~~~
%Error-UNSUPPORTED: t/t_queue_slice.v:38:11: Unsupported: Replication to form 'string[$]' data type
                                           : ... In instance t
   38 |       q = {"q", "b", "c", "d", "e", "f"};
      |           ^
%Error: t/t_queue_slice.v:39:12: Illegal range select; type already selected, or bad dimension: data type is 'string[$]'
                               : ... In instance t
   39 |       q = q[2:3];
      |            ^
%Error-UNSUPPORTED: t/t_queue_slice.v:41:11: Unsupported: Replication to form 'string[$]' data type
                                           : ... In instance t
   41 |       q = {"q", "b", "c", "d", "e", "f"};
      |           ^
%Error-UNSUPPORTED: t/t_queue_slice.v:42:15: Unsupported/illegal unbounded ('$') in this context.
                                           : ... In instance t
   42 |       q = q[3:$];
      |               ^
%Error: t/t_queue_slice.v:42:15: First value of [a:b] isn't a constant, maybe you want +: or -:
                               : ... In instance t
   42 |       q = q[3:$];
      |               ^
%Error: t/t_queue_slice.v:42:12: Illegal range select; type already selected, or bad dimension: data type is 'string[$]'
                               : ... In instance t
   42 |       q = q[3:$];
      |            ^
%Error-UNSUPPORTED: t/t_queue_slice.v:46:11: Unsupported: Replication to form 'string[$]' data type
                                           : ... In instance t
   46 |       q = {q, "f1"};   
      |           ^
%Error-UNSUPPORTED: t/t_queue_slice.v:47:11: Unsupported: Replication to form 'string[$]' data type
                                           : ... In instance t
   47 |       q = {q, "f2"};   
      |           ^
%Error-UNSUPPORTED: t/t_queue_slice.v:48:11: Unsupported: Replication to form 'string[$]' data type
                                           : ... In instance t
   48 |       q = {"b1", q};   
      |           ^
%Error-UNSUPPORTED: t/t_queue_slice.v:49:11: Unsupported: Replication to form 'string[$]' data type
                                           : ... In instance t
   49 |       q = {"b2", q};   
      |           ^
%Error-UNSUPPORTED: t/t_queue_slice.v:50:11: Unsupported: Replication to form 'string[$]' data type
                                           : ... In instance t
   50 |       q = {q[0], q[2:$]};   
      |           ^
%Error-UNSUPPORTED: t/t_queue_slice.v:50:22: Unsupported/illegal unbounded ('$') in this context.
                                           : ... In instance t
   50 |       q = {q[0], q[2:$]};   
      |                      ^
%Error: t/t_queue_slice.v:50:22: First value of [a:b] isn't a constant, maybe you want +: or -:
                               : ... In instance t
   50 |       q = {q[0], q[2:$]};   
      |                      ^
%Error: t/t_queue_slice.v:50:19: Illegal range select; type already selected, or bad dimension: data type is 'string[$]'
                               : ... In instance t
   50 |       q = {q[0], q[2:$]};   
      |                   ^
%Error-UNSUPPORTED: t/t_queue_slice.v:54:25: Unsupported: Replication to form 'string[$]' data type
                                           : ... In instance t
   54 |          string ai[$] = { "Foo", "Bar" };
      |                         ^
%Error-UNSUPPORTED: t/t_queue_slice.v:59:14: Unsupported: Assignment pattern applies against non struct/union data type: 'string[$]'
                                           : ... In instance t
   59 |          q = '{ "BB", "CC" };   
      |              ^~
%Error-UNSUPPORTED: t/t_queue_slice.v:62:14: Unsupported: Replication to form 'string[$]' data type
                                           : ... In instance t
   62 |          q = { "BB", "CC" };   
      |              ^
%Error: Exiting due to
